--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">CODING</a>
 					</header>
 
 				<!-- Nav -->
@@ -50,7 +50,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">this is my projrct<br />
+									<h2><a href="#">this is my project<br />
 									portfolio</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
