--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@
 								<header class="major">
 									<h2><a href="#">this is my project<br />
 									portfolio</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>An upcoming tech generation</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">CHECK IT OUT</a></li>
+									<li><a href="https://github.com/okore-lens/react-101.git" class="button large">CHECK IT OUT</a></li>
 								</ul>
 							</article>
 
