--- a/index.html
+++ b/index.html
@@ -64,24 +64,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">project 1 Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">project 1<br />
+										UNSPLASH</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>This website tells us more about Unsplash:a website where we get pictures</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">CHECK IT OUT</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Project Two Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">CHECK IT OUT</a></li>
+										<li><a href="https://github.com/KwechaToo/buttons.html.git" class="button">CHECK IT OUT</a></li>
 									</ul>
 								</article>
 							</section>
